# memory

./: .gitignore  README.md  docker-compose.yml  new_calendar.xlsx  nuevo_calendario.xlsx  pyproject.toml
app/: app.py
app/config/: paths.py
app/core/: catalog.py  models.py
app/services/: calendar_service.py  data_processor.py
app/utils/: formatters.py  helpers.py
backend/: Dockerfile  manage.py  requirements.txt
backend/accounts/: models.py  serializer.py  views.py
backend/accounts/management/commands/: seed_profiles.py
backend/accounts/migrations/: 0001_initial.py  0002_rename_docenteprofile_docente.py  0002_rename_user_id_docencia_user_and_more.py  0003_user_remove_docente_rut_docente_work_schedule_and_more.py
backend/courses/: models.py  serializers.py  views.py
backend/courses/migrations/: 0001_initial.py
backend/dcc_catalog/: asgi.py  settings.py  urls.py  wsgi.py
backend/preferences/: models.py  serializer.py  views.py
backend/preferences/migrations/: 0001_initial.py
data/: all_data.xls  d01.xls  d02.xls  d03.xls
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
processed_data/: CC_Final.xlsx  CC_filtered.xlsx
