[project]
name = "memoria"
version = "0.1.0"
description = ""
authors = [
    {name = "Joyo-G",email = "gustavo.joyo.p@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "xlrd (>=2.0.2,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "python-calamine (>=0.6.1,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
