[tool.poetry]
name = "memoria"
version = "0.1.0"
description = ""
authors = ["Joyo-G <gustavo.joyo.p@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
pandas = ">=2.3.3,<3.0.0"
xlrd = ">=2.0.2,<3.0.0"
openpyxl = ">=3.1.5,<4.0.0"
python-calamine = ">=0.6.1,<0.7.0"
django = ">=6.0.3,<7.0.0"
psycopg = ">=3.3.3,<4.0.0"
djangorestframework = "^3.16.1"
psycopg2-binary = "^2.9.11"
django-filter = "^25.2"
markdown = "^3.10.2"

[tool.poetry.group.dev.dependencies]
poetry-plugin-export = "^1.10.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"